<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@color/orange"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        android:elevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="152dp"
                android:layout_height="152dp"
                android:layout_gravity="center"
                android:src="@drawable/logo_vlad"
                android:contentDescription="@string/content_desc" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_page_text"
                android:textSize="24sp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/blood" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_to_continue_text"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                android:textColor="@color/blood" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp">

                <!--                email input-->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    app:startIconDrawable="@drawable/ic_mail">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_input"
                        android:inputType="textEmailAddress"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <!--                password input-->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    app:passwordToggleEnabled="true"
                    app:startIconDrawable="@drawable/ic_lock">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password_input"
                        android:inputType="textPassword"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/forgotPassword"
                    android:text="@string/forgot_password_text"
                    android:textColor="@color/black"
                    android:gravity="end"
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:backgroundTint="@color/green"
                    android:text="@string/login_text"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/btn_toRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:text="@string/don_t_have_account_sign_up" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</ScrollView>