<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@color/orange"
    tools:context=".RegisterActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        android:elevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="192dp"
                android:layout_height="192dp"
                android:layout_gravity="center"
                android:src="@drawable/logo_vlad"
                android:contentDescription="@string/content_desc" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hello"
                android:textSize="24sp"
                android:gravity="center"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                android:textColor="@color/blood" />
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp">

                <Button
                    android:id="@+id/btn_donorReg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:backgroundTint="@color/green"
                    android:text="@string/donor_registration_btn"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btn_recipientReg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:backgroundTint="@color/green"
                    android:text="@string/recipient_registration_btn"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/btn_back"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:text="@string/to_login" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>