<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@color/orange"
    tools:context=".RecipientRegisterActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        android:elevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Recipient Registration"
                android:textSize="24sp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/blood" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_to_continue"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                android:textColor="@color/blood" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="16dp"
                    android:src="@drawable/profile_image"
                    app:civ_border_color="#FF000000" />

                <!--                fullname input-->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    app:startIconDrawable="@drawable/ic_baseline_person_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/register_fullname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/full_name"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <!--                idnumber input-->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    app:startIconDrawable="@drawable/ic_number">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/register_idnumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/id_number"
                        android:inputType="number"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <!--                phone number-->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    app:startIconDrawable="@drawable/ic_baseline_phone_android_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/register_phonenumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone_number"
                        android:inputType="number"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <!--                blood type-->
                <Spinner
                    android:id="@+id/blood_type_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:entries="@array/blood_type"
                    android:gravity="center"
                    android:layout_marginBottom="8dp"
                    android:minHeight="48dp" />

                <!--                email input-->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    app:startIconDrawable="@drawable/ic_mail">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/register_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_input"
                        android:inputType="textEmailAddress"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <!--                password input-->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    app:passwordToggleEnabled="true"
                    app:startIconDrawable="@drawable/ic_lock">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/register_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password_input"
                        android:inputType="textPassword"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:backgroundTint="@color/green"
                    android:text="@string/sign_up_text"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/btn_back"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:text="@string/to_login" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</ScrollView>